# vorbis-tools

./: .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CHANGES  ChangeLog  HACKING  Makefile.am  README  README.md  acinclude.m4  autogen.sh  config.h  config.rpath  configure.ac  configure.in  file-replace.pl  vorbis-tools.spec
debian/: Makefile.am  README.Debian  changelog  control  copyright  rules  vorbis-tools.examples  vorbis-tools.files  vorbis-tools.install  vorbis-tools.manpages  vorbis-tools.mime  vorbis-tools.postinst  vorbis-tools.postrm  vorbis-tools.preinst  vorbis-tools.prerm  vorbis-tools.undocumented  watch
include/: Makefile.am  base64.h  getopt.h  i18n.h  picture.h  utf8.h
intl/: dcigettext.c  localename.c
m4/: ChangeLog  Makefile.am  acx_pthread.m4
ogg123/: .cvsignore  Makefile.am  ao_interface.c  audio.c  audio.h  buffer.c  buffer.h  callbacks.c  callbacks.h  cfgfile_options.c  cfgfile_options.h  cmdline_options.c  cmdline_options.h  compat.h  easyflac.c  file_transport.c  flac_format.c  format.c  format.h  http_transport.c  nullbuffer.c  ogg123.1  ogg123.c  ogg123.h  ogg123rc-example  oggvorbis_format.c  opus_format.c  playlist.c  playlist.h  remote.c  remote.h  speex_format.c  status.c  status.h  transport.c  transport.h  vgfilter.c  vgfilter.h  vorbis_comments.c  vorbis_comments.h
oggchain/: Makefile.am  oggchain.c  oggchain.h
oggdec/: .cvsignore  Makefile.am  Makefile.in  oggdec.1  oggdec.c
oggenc/: .cvsignore  Makefile.am  audio.c  audio.h  build_oggenc.bat  easyflac.c  encode.c  encode.h  flac.c  flac.h  lyrics.c  oe_unix.c  oe_win32.c  oggenc.c  oggenc.dsp  platform.c  platform.h  resample.c  skeleton.c  skeleton.h  utf8.c
oggenc/man/: Makefile.am  oggenc.1
ogginfo/: .cvsignore  Makefile.am  codec_flac.c  codec_invalid.c  codec_kate.c  codec_opus.c  codec_other.c  codec_skeleton.c  codec_speex.c  codec_theora.c  codec_vorbis.c  metadata.c  ogginfo.1  ogginfo.c  ogginfo2.c  private.h  theora.c  theora.h
po/: .cvsignore  ChangeLog  Makefile.in.in  Makevars  POTFILES.in  be.po  cs.po  da.gmo  da.po  de.po  en_GB.po  eo.po  es.gmo  es.po  fr.gmo  fr.po  hr.gmo  hr.po  hu.gmo  hu.po  id.po  ka.po  nb.po  nl.gmo  nl.po  pl.po  pt_BR.po  ro.po  ru.gmo  ru.po  sk.po  sl.po  sr.po  sv.gmo  sv.po  uk.po  vi.po  vorbis-tools.pot
share/: Makefile.am  base64.c  charset.c  charset_test.c  getopt.c  getopt1.c  iconvert.c  make_code_map.pl  picture.c  utf8.c
tests/: Makefile.am  test-enc-dec
vcut/: .cvsignore  Makefile.am  vcut.1  vcut.c  vcut.h
vorbiscomment/: .cvsignore  Makefile.am  vcedit.c  vcedit.h  vceditaux.h  vcomment.c  vorbiscomment.1  vorbiscomment.c
win32/: .cvsignore  Makefile.am  config.h  oggdec.dsp  oggenc.dsp  oggenc_dynamic.dsp  ogginfo.dsp  tools.dsp  tools.dsw  tools.opt  vcut.dsp  vorbiscomment.dsp
win32/VS2003/: vorbis-tools.sln
win32/VS2003/oggdec/: oggdec.vcproj
win32/VS2003/oggenc/: oggenc.vcproj
win32/VS2003/ogginfo/: ogginfo.vcproj
win32/VS2003/vcut/: vcut.vcproj
win32/VS2003/vorbiscomment/: config.h  vorbiscomment.vcproj
win32/VS2005/: config.h  copy_libs_here.cmd  vorbis-tools.sln
win32/VS2005/oggdec/: oggdec.vcproj
win32/VS2005/oggenc/: config.h  oggenc.vcproj
win32/VS2005/ogginfo/: ogginfo.vcproj
win32/VS2005/vcut/: vcut.vcproj
win32/VS2005/vorbiscomment/: vorbiscomment.vcproj
win32/VS2013/: copy_libs_here.cmd  vorbis-tools.sln
win32/VS2013/oggdec/: oggdec.vcxproj  oggdec.vcxproj.filters
win32/VS2013/oggenc/: oggenc.vcxproj  oggenc.vcxproj.filters
win32/VS2013/ogginfo/: ogginfo.vcxproj  ogginfo.vcxproj.filters
win32/VS2013/vcut/: vcut.vcxproj  vcut.vcxproj.filters
win32/VS2013/vorbiscomment/: vorbiscomment.vcxproj  vorbiscomment.vcxproj.filters
